--- a/contacto.html
+++ b/contacto.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>La floreria de chopo</h1>
+        <h1>La floreria de Maxi</h1>
         <nav class="navbar">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
